# tikitakipixi

./: LICENSE  README.md
tikitakipixi/: AppDelegate.swift  ViewController.swift
tikitakipixi.xcodeproj/: project.pbxproj
tikitakipixi.xcodeproj/project.xcworkspace/xcuserdata/j.xcuserdatad/: UserInterfaceState.xcuserstate
tikitakipixi.xcodeproj/xcuserdata/j.xcuserdatad/xcschemes/: xcschememanagement.plist
tikitakipixi/Base.lproj/: Main.storyboard
titapiJUCE/: CMakeLists.txt
titapiJUCE/src/: LoupeComponent.cpp  LoupeComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h
